# Ribossome

./: .editorconfig  .gitignore  AGENT_FILE_FORMAT.md  AMINO_ACIDS_CONFIG.md  BRANCH_SETUP.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  ORGAN_RENDERING_AUDIT.md  ORGAN_TABLE.csv  PERLIN_RAIN_VISUALIZATION.md  README.md  REFACTORING_AUDIT.md  RESOLUTION_SETTINGS.md  SHADER_REFACTORING_PLAN.md  amino_acids.json  build.rs  combined_shaders.wgsl  generate_font.ps1  new_functions.txt  remove_bom.ps1  reverse_complement_check.md  run.ps1  shader.wgsl  shader_before_split.wgsl  shader_changes.patch  simulation.wgsl  simulation_settings.json
.github/: copilot-instructions.md
archive/: old_main.rs  shader_changes.patch  simulation_before_render_split.wgsl  temp_main_3250019.rs  temp_previous_shader.wgsl  temp_reference.wgsl  temp_shader_3250019.wgsl
config/: ORGAN_TABLE.csv  amino_acids.json  emitter_test.json  organ_slots.csv  part_properties.json  simulation_settings.json  vampire_test.json
docs/: AMINO_ACIDS_CONFIG.md  CODE_OF_CONDUCT.md  IMPLEMENTATION_ROADMAP.md  PERLIN_RAIN_VISUALIZATION.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  RUNTIME_RESOLUTION_SWITCHING.md  SHADER_REFACTORING_PLAN.md  reverse_complement_check.md  sensor_power_table.csv
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
scripts/: build.ps1  generate_sensor_power_table.ps1  generate_sensor_power_table.py  pack_font_segments.py  package_release.ps1  remove_bom.ps1  update_energy_storage.py  update_shader_energy.py
shaders/: compact_merge.wgsl  compact_merge_minimal.wgsl  composite.wgsl  fluid.wgsl  fluid_visualize.wgsl  microswim.wgsl  rain.wgsl  render.wgsl  reproduction.wgsl  shared.wgsl  shared_types_only.wgsl  simulation.wgsl
src/: amino_acids.rs  fluid_test.rs  main.rs  naming.rs  splash.wgsl
(+2 files in other folders)
