[package]
name = "life_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
env_logger = "0.11"
egui = { version = "0.29", features = ["default"] }
egui_plot = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
futures-intrusive = "0.5.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp"] }
png = "0.17"
base64 = "0.21"
zstd = "0.13"
chrono = "0.4"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
